--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,9 @@
 .App {
-  text-align: center;
+ 
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  width: 5em;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -28,11 +27,3 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
