--- a/src/Components/cardInsight/card.css
+++ b/src/Components/cardInsight/card.css
@@ -17,9 +17,10 @@
     height: 7em;
 }
 .card p{
-    font-size:1em;
+    font-size:2.5em;
     color:#ED4D77;
     margin-left: -2em;
+    margin-top: -0.4em;
    
     }
 .component h1{
